<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/permissoin_center"
        android:padding="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <TextView
            android:id="@+id/tv_title"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_text_size"
            android:text="@string/storage_access"
            />
        <TextView
            android:id="@+id/tv_permission_text"
            android:layout_width="match_parent"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/storage_access2"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_permission_text"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tv_deny"
                android:layout_width="120dp"
                android:text="@string/later"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/blue"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tv_allow_ok"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:paddingLeft="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:paddingRight="20dp"
                android:textColor="@color/blue"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />



        </LinearLayout>



    </RelativeLayout>

</RelativeLayout>
