<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <include layout="@layout/top_bar"></include>
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="62dp"
        android:background="@color/take_a_tour">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/safe1"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="16dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/safe2"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="16dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/safe3"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="16dp"
                />
        </LinearLayout>

</RelativeLayout>
    <TextView
        android:id="@+id/tv_front"
        android:layout_width="231dp"
        android:layout_height="52dp"
        android:background="@drawable/blue_center_button"
        android:text="@string/next"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:layout_centerInParent="true"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/animation_center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"/>

    <RelativeLayout
        android:id="@+id/rel_below"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:scaleType="center"
            android:src="@mipmap/bottom_image"/>

        <RelativeLayout
            android:id="@+id/rel_first_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            >
            <ImageView
                android:id="@+id/img_temp"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/sand_clock"
                />

            <TextView
                android:layout_below="@+id/img_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:layout_marginTop="20dp"



                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_toRightOf="@+id/rel_first_bottom"
            android:id="@+id/rel_second_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            >
            <ImageView
                android:id="@+id/img_safe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:tint="@color/blue"
                android:src="@mipmap/fingerprint"
                />

            <TextView
                android:layout_below="@+id/img_safe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safe"
                android:textColor="@color/blue"

                android:layout_marginTop="20dp"



                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            >
            <RelativeLayout
                android:id="@+id/rel_third_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                >
                <ImageView
                    android:id="@+id/img_clean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/broom"
                    />

                <TextView
                    android:layout_below="@+id/img_clean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clean"
                    android:layout_marginTop="20dp"



                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_fourth_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/rel_third_bottom"

                >
                <ImageView
                    android:id="@+id/img_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/settings"
                    />

                <TextView
                    android:layout_below="@+id/img_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting"
                    android:layout_marginTop="20dp"



                    />

            </RelativeLayout>

        </RelativeLayout>



    </RelativeLayout>

</RelativeLayout>