<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/icon_splash2">

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_splash2_center"

        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView" />


    <LinearLayout
        android:id="@+id/ll_center_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/imageView">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keeptoo"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safe"
            android:textColor="@android:color/white"

            android:gravity="center"
            android:textSize="30dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_center"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title1"

        android:textColor="@android:color/white"
        android:layout_below="@+id/ll_center_text"
        android:gravity="center"
        android:textSize="20dp"
        />
<!--
    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip"

        android:textColor="@android:color/white"
        android:layout_below="@+id/tv_center"
        android:gravity="center"
        android:textSize="20dp"
        />
-->

</RelativeLayout>